2011-01-17  vadim  <vadim@netcitadel.com>

	* NATCompiler_asa8.h (fwcompiler): see #1949 "ASA NAT - split
	objects if OSrc contains objects that are in more than one network
	zone".

2011-01-16  vadim  <vadim@netcitadel.com>

	* NamedObjectsAndGroupsSupport.cpp (processNext): Added support for
	CustomService objects in policy and nat rules for asa 8.3 using
	named objects and object-groups.
	 -- see #1942 "ASA NAT - if custom service is included in service
	group incorrect config generated"
	 -- see #1929 "move map named_objects inside class NamedObjectManager"
	 -- see #1946 "restrict generation of the named objects by
	PolicyCompiler_pix to ASA 8"
	 -- see #1885 "named network and service objects in pix8"

	* NATCompiler_pix.cpp (processNext): see #1941 "ASA NAT - compiler
	complains about range in original destination". NAT rules
	translating destination allow Address Range objects in ODst or TDst
	for ASA 8.3

	* NamedObject.cpp (NamedObject): see #1940 "ASA NAT - fwbuilder
	host objects interface ip is reserved keyword". Added list of
	reserved words used in IOS and ASA software to make sure generated
	named objects do not conflict. Will maintain single super-set
	of reserved words instead of separate set for each version of IOS
	and ASA.

	* PolicyCompiler_pix.cpp (compile): fixed #1938 "icmp" commands
	were not generated for ASA 8.x policy rules.

	* NATCompiler_asa8.cpp (processNext): See #1927. Added check for
	NAT rules that request translation of destination address but have
	ODst "any". This only applies to ASA 8.3; these rules are
	prohibited.

2011-01-14  vadim  <vadim@netcitadel.com>

	* NATCompiler_asa8_writers.cpp (printSDNAT): fixes #1932 "Add
	description field to generated NAT rules for ASA". NAT rules
	generated for ASA 8.3 and later will have "description" keyword
	added, with rule label as an argument. Rule label includes
	word "NAT" and rule number.

	* libfwbuilder/src/fwbuilder/InetAddrMask.cpp (getOverlap): fixes