@@ -1,5 +1,10 @@
 2011-01-17  vadim  <vadim@netcitadel.com>
 
+	* NamedObjectsAndGroupsSupport.cpp (processNext): See #1943 "ASA
+	Policy - mixed service group with TCP destination port range and
+	standard TCP object generates invalid config". Protocol word "tcp"
+	was missing after "deny" in the generated rule.
+
 	* NATCompiler_asa8.h (fwcompiler): see #1949 "ASA NAT - split
 	objects if OSrc contains objects that are in more than one network
 	zone".
